# World_Cup_2026_prediction_workspace

./: .env.example  .gitignore  BACKTEST.md  LICENSE  README.md  app.py  build_data.py  build_excel.py  build_form_h2h.py  build_holdouts.py  diagnose_live.py  fetch_fifa_points.py  fetch_form.py  fetch_h2h.py  fetch_holdout.py  fetch_odds.py  fetch_player_props.py  hermes.py  hermes_push.sh  predict_bracket.py  predict_groups.py  predict_thirds.py  predict_topscorer.py  predict_value.py  pyproject.toml  requirements.txt  scout.py  sim_r32_news.py
.github/workflows/: ci.yml
data/: .data_meta.json  app_odds.csv  backtest_2022.csv  backtest_euro2020.csv  backtest_euro2024.csv  backtest_meta.json  backtest_wc2014.csv  backtest_wc2018.csv  cowork_expert.json  cowork_model.json  expert_scores.csv  fifa_ranking_20260401.json  fifa_ranking_20260611.json  form.csv  groups.csv  h2h.csv  market_odds.csv  matches.csv  model_probs.csv  my_predictions.csv  news_adjustments.csv  odds.csv  players.csv  players_market.csv  team_id_map.json  teams.csv
data/holdout_raw/: euro2024.csv
docs/session-insights/: 2026-06-11-1530-session-insight.md  2026-07-01-2230-session-insight.md  2026-07-01-2315-session-insight.md
scripts/: pre_match_briefing.py
src/: __init__.py  backtest.py  bonus.py  datameta.py  elo.py  engine.py  i18n.py  knockout.py  models.py  oddslib.py  playerprops.py  providers.py
tests/: test_backtest.py  test_elo.py  test_elo_ratings.py  test_engine_invariants.py  test_fetch_fifa_points.py  test_fetch_holdout.py  test_fetch_odds.py  test_fetch_player_props.py  test_fifa_snapshot.py  test_form.py  test_h2h.py  test_holdout.py  test_hosts.py  test_i18n.py  test_inplay.py  test_integrity.py  test_knockout.py  test_leakage.py  test_market_anchor.py  test_oddslib.py  test_playerprops.py  test_providers.py  test_sim_consistency.py  test_sup_mode.py
